--- a/.github/workflows/rss_to_telegram.yml
+++ b/.github/workflows/rss_to_telegram.yml
@@ -16,13 +16,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.8'  # 或者你需要的其他版本
-
+          
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install requests
-          pip install feedparser
-          pip install aiohttp
+          pip install -r requirements.txt
 
       - name: Run RSS to Telegram script
         env:
