--- a/.github/workflows/rss_to_telegram.yml
+++ b/.github/workflows/rss_to_telegram.yml
@@ -6,39 +6,23 @@ on:
     - cron: '0 */8 * * *'  # 每8小时运行一次
 
 jobs:
-  send_rss:
+  run-rss-to-telegram:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.8'  # 或者你需要的其他版本
-          
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
-          pip install feedparser
-          pip install aiohttp
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
 
-      - name: Run RSS to Telegram script
-        env:
-          TELEGRAM_BOT_YOUTUBE: ${{ secrets.TELEGRAM_BOT_YOUTUBE }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
-          python send_rss.py
-          
-      - name: Commit sent entries
-        run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'action@github.com'
-          git add sent_entries.json
-          if ! git diff --cached --quiet; then  # 检查是否有变化
-            git commit -m 'Update sent entries'
-            git push
-          else
-            echo "No changes to commit"
-          fi
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install aiohttp aiomysql feedparser
+
+    - name: Run script
+      run: |
+        python rss.py
