--- a/.github/workflows/rss_to_telegram.yml
+++ b/.github/workflows/rss_to_telegram.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install aiohttp aiomysql feedparser
+        pip install python-dotenv
 
     - name: Run script
       run: |
