--- a/.github/workflows/rss_to_telegram.yml
+++ b/.github/workflows/rss_to_telegram.yml
@@ -1,7 +1,7 @@
 name: RSS to Telegram
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # 允许手动触发工作流
   schedule:
     - cron: '0 */8 * * *'  # 每8小时运行一次
 
@@ -25,5 +25,12 @@ jobs:
         pip install python-dotenv
 
     - name: Run script
+      env:
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        DB_HOST: ${{ secrets.DB_HOST }}
+        DB_NAME: ${{ secrets.DB_NAME }}
+        DB_USER: ${{ secrets.DB_USER }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        ALLOWED_CHAT_IDS: ${{ secrets.ALLOWED_CHAT_IDS }}
       run: |
         python rss.py
