--- a/.github/workflows/rss_to_telegram.yml
+++ b/.github/workflows/rss_to_telegram.yml
@@ -20,9 +20,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install aiohttp aiomysql feedparser
-        pip install python-dotenv
+        pip install -r requirements.txt  # 安装依赖
 
     - name: Run YouTube RSS script
       env:
